# Recommender-System

./: .env  .gitignore  CLAUDE.md  README.md  bentofile.yaml  docker-compose.app.yml  docker-compose.ml_service.yml  docker-compose.service.yml  docker-compose.yml  dvc.yaml  main.py  metrics.json  params.yaml  prometheus.yml  pyproject.toml  revised_action_plan_senior_ml_engineer.md
.dvc/: config
container/: .containerignore  Containerfile
data/raw/: .gitignore  u.data.dvc
mlruns/0/: meta.yaml
mlruns/0/5938e02cf9aa4d4596fcc644243feac8/: meta.yaml
mlruns/0/5938e02cf9aa4d4596fcc644243feac8/metrics/: trainset_items  trainset_users
mlruns/0/5938e02cf9aa4d4596fcc644243feac8/tags/: mlflow.runName
mlruns/0/models/m-ac2d3586ebfc4ca1aee961575bde1507/: meta.yaml
mlruns/973302599640655819/: meta.yaml
mlruns/973302599640655819/21371b78838c47e3aedeec08919dd0a7/: meta.yaml
mlruns/973302599640655819/21371b78838c47e3aedeec08919dd0a7/metrics/: trainset_items  trainset_users
mlruns/973302599640655819/443fed8665734ba0bc67719af3afc36c/: meta.yaml
mlruns/973302599640655819/443fed8665734ba0bc67719af3afc36c/metrics/: trainset_users
mlruns/973302599640655819/6fa8d42ad5be40e483da883a4530b083/: meta.yaml
scripts/: setup_project.sh  train_experiment.py
src/: batch_job.py  model.pkl  model_surprise.pkl  service.py
src/api/: client.py  load_test.py  test_api.py
src/data/: preprocessing.py
src/models/: batch_train.py  eval_metrics.json  evaluation.py  main.py  predict.py  serve.py  train.py  train_experiment.py  train_metrics.json
tests/: test_model.py
(+15 files in other folders)
